--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     overflow-x: hidden;
     background: transparent;
     min-width: 100vh;
+    -webkit-user-select:none;
+    -moz-user-select:-moz-none;
+    -ms-user-select:none;
+    user-select:none
 }
 
 #header {
