--- a/style.css
+++ b/style.css
@@ -15,10 +15,12 @@ body {
     overflow-x: hidden;
     background: transparent;
     min-width: 100vh;
-    -webkit-user-select:none;
-    -moz-user-select:-moz-none;
-    -ms-user-select:none;
-    user-select:none
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #header {
